# analyze-this

./: .gitignore  .sops.yaml  Makefile  README.md  cloudbuild.yaml  disk-config.nix  firebase_setup.md  flake.nix  hardware-configuration.nix  issues.md  pyproject.toml  secrets.yaml  server.nix  test_main_error_leakage.py
.claude/: settings.local.json
.github/: CODEOWNERS
.jules/: sentinel.md
agent/: README.md  mcp-config.json  package-lock.json  package.json
analyze_this/: __init__.py
analyze_this_flutter/: pubspec.yaml
backend/: .env.example  Dockerfile  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER.md  WORKER.md  analysis.py  audio_synthesis.py  database.db  database.py  development.db  follow_up_analysis.py  main.py  mcp_config.example.json  mcp_server.py  mcp_workspace.py  models.py  normalization.py  notifications.py  podcast_audio.py  podcast_content.py  podcast_derivative.py  rate_limiter.py  requirements.txt  run_mcp_server.sh  test.html  test_main_error_leakage.py  test_main_error_leakage_2.py  test_main_error_leakage_3.py  test_mcp_server.py  ticktick.py  tracing.py  worker.py  worker_analysis.py  worker_follow_up.py  worker_manager.py  worker_normalize.py  worker_podcast_audio.py  worker_podcast_derivative.py  worker_queue.py
docs/: build-local.md  export-data-test-data.md  item-lifecycle.md  nix-deploy.md  timeline.md
extension/: background.js  capture.js  config.js  manifest.json  offscreen.html  offscreen.js  popup.html  popup.js  scroll.js
flutter/: README.md  analysis_options.yaml  pubspec.yaml
mobile/: app.json  eas.json  package.json
(+191 files in other folders)
